--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>SmartWatchX - Revolução no Seu Pulso</title>
-    <link rel="stylesheet" href="../Landing Page/CSS/estilo.css" />
+    <link rel="stylesheet" href="/CSS/estilo.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alkatra&display=swap" rel="stylesheet">
