--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>SmartWatchX - Revolução no Seu Pulso</title>
-    <link rel="stylesheet" href="/CSS/estilo.css" />
+    <link rel="stylesheet" href="CSS/estilo.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alkatra&display=swap" rel="stylesheet">
@@ -35,7 +35,7 @@
     <article>
         <div class="container">
             <div class="feature">
-                <div class="feature-image"><img src="../Landing Page/imagens/Smart.png"></div>
+                <div class="feature-image"><img src="imagens/Smart.png"></div>
                 <div class="feature-title">Monitoramento de Saúde</div>
                 <div class="feature-description">O SmartWatchX possui recursos avançados de monitoramento de saúde, como
                     monitoramento contínuo de batimentos cardíacos, acompanhamento do sono, monitoramento de atividades
@@ -44,7 +44,7 @@
             </div>
 
             <div class="feature">
-                <div class="feature-image"><img src="../Landing Page/imagens/Smart.png"></div>
+                <div class="feature-image"><img src="imagens/Smart.png"></div>
                 <div class="feature-title">Notificações Inteligentes</div>
                 <div class="feature-description">O SmartWatchX mantém você conectado ao seu mundo digital, fornecendo
                     notificações inteligentes diretamente no seu pulso. Receba notificações de chamadas, mensagens,
@@ -53,7 +53,7 @@
             </div>
 
             <div class="feature">
-                <div class="feature-image"><img src="../Landing Page/imagens/Smart.png"></div>
+                <div class="feature-image"><img src="imagens/Smart.png"></div>
                 <div class="feature-title">Design Moderno e Durável</div>
                 <div class="feature-description">O SmartWatchX possui um design elegante e moderno, com uma tela AMOLED
                     nítida e vibrante. Seu acabamento premium e materiais de alta qualidade garantem durabilidade e
